--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,16 @@
 *.dll
 *.so
 *.dylib
+cmd/server-sugar-app
 
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.sum
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .idea/
+configs/
