--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.dll
 *.so
 *.dylib
-cmd/server-sugar-app
+server-sugar-app
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,6 +12,7 @@ cmd/server-sugar-app
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 *.sum
+nohup.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
